--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.1.1
   http: ^1.1.0
   shimmer: ^3.0.0
+  url_launcher: ^6.1.14
+  flutter_native_splash: ^2.3.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
