--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   shimmer: ^3.0.0
   url_launcher: ^6.1.14
   flutter_native_splash: ^2.3.4
+  cloud_firestore: ^4.9.3
+  firebase_auth: ^4.10.1
+  firebase_core: ^2.17.0
+  firebase_database: ^10.2.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
